# GenAIMarketplace

./: .env.production  .gitignore  .last-branch  ADMIN_GUIDE.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  prd.json  progress.txt  prompt.md  ralph.ps1  ralph.sh  start-dev.bat  start-dev.ps1  start-prod.bat  tech-stack.txt
backend/: .dockerignore  .env.production  .gitignore  DOCKER.md  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  load-test-results.md  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fts5_search.py  003_analytics_indexes.py  004_likes_table.py  005_recommendations_table.py  006_item_types_table.py  006_postgres_fts.py  007_fix_docs_type_name.py  007_item_types_table.py  008_add_image_url_to_items.py  008_fix_docs_type_name.py  009_add_image_url_to_items.py  010_make_content_optional.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  caching.py  config.py  database.py
backend/app/models/: __init__.py  category.py  item.py  item_type.py  like.py  recommendation.py  search_log.py  tag.py
backend/app/routers/: __init__.py  analytics.py  auth.py  categories.py  item_types.py  items.py  recommendations.py  search.py  seed.py  tags.py  upload.py
backend/scripts/: __init__.py  load_test.py  measure_search_latency.py  seed_content.py  seed_data.py  start.sh
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_categories.py  test_items.py  test_search.py  test_tags.py
(+102 files in other folders)
